# rayon-rs

./: Cargo.toml
ci/highlander/: Cargo.toml
rayon-core/src/: job.rs  latch.rs  lib.rs  registry.rs
rayon-core/src/broadcast/: mod.rs
rayon-core/src/join/: mod.rs  test.rs
rayon-core/src/scope/: mod.rs  test.rs
rayon-core/src/spawn/: mod.rs
rayon-demo/: Cargo.toml
rayon-demo/src/: main.rs
rayon-demo/src/life/: mod.rs
rayon-demo/src/matmul/: mod.rs
rayon-demo/src/mergesort/: mod.rs
rayon-demo/src/nbody/: mod.rs  nbody.rs
rayon-demo/src/quicksort/: mod.rs
rayon-demo/src/sieve/: mod.rs
rayon-demo/src/tsp/: graph.rs  mod.rs
src/: range.rs  range_inclusive.rs  result.rs  vec.rs
src/iter/: interleave.rs  mod.rs  test.rs
src/slice/: sort.rs
tests/: producer_split_at.rs  str.rs
