[package]
name = "rayon"
version = "1.11.0"
description = "Simple work-stealing parallelism for Rust"
documentation = "https://docs.rs/rayon/"
exclude = ["/ci/*", "/.github/*"]

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# This feature switches to a spin-lock implementation on the browser's
# main thread to avoid the forbidden `atomics.wait`.
#
# Only useful on the `wasm32-unknown-unknown` target.
web_spin_lock = ["dep:wasm_sync", "rayon-core/web_spin_lock"]

[dependencies]
# These are both public dependencies!
rayon-core = { workspace = true }
either.workspace = true

wasm_sync = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
rand_xorshift.workspace = true


[workspace]
members = ["rayon-demo", "rayon-core"]
exclude = ["ci"]

[workspace.package]
readme = "README.md"
rust-version = "1.93"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rayon-rs/rayon"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]

[workspace.dependencies]
# Internal
rayon = { version = "1.11.0", path = "." }
rayon-core = { version = "1.13.0", path = "rayon-core" }

# External
cgmath = "0.18"
crossbeam-deque = "0.8.6"
crossbeam-utils = "0.8.21"
doc-comment = "0.3"
docopt = "1"
either = { version = "1", default-features = false }
fixedbitset = "0.5"
glium = "0.36"
libc = "0.2"
num = "0.4"
rand = { version = "0.10", git = "https://github.com/earthlings-dev/rand.git" }
rand_xorshift = { version = "0.5", git = "https://github.com/earthlings-dev/rngs.git" }
regex = "1"
scoped-tls = "1.0"
serde = { version = "1.0.228", features = ["derive"], git = "https://github.com/earthlings-dev/serde.git" }
wasm_sync = "0.1.2"
winapi = { version = "0.3", features = ["processthreadsapi"] }
winit = "0.30"

[patch.crates-io]
serde = { git = "https://github.com/earthlings-dev/serde.git" }
serde_core = { git = "https://github.com/earthlings-dev/serde.git" }
serde_derive = { git = "https://github.com/earthlings-dev/serde.git" }
