[package]
name = "rayon-demo"
publish = false

edition.workspace = true
rust-version.workspace = true

[dependencies]
rayon.workspace = true
cgmath.workspace = true
docopt.workspace = true
fixedbitset.workspace = true
glium.workspace = true
rand.workspace = true
rand_xorshift.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
winit.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["processthreadsapi"] }

[dev-dependencies]
doc-comment.workspace = true
num.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bench)'] }
